<resources>
    <string name="app_name" translatable="false">School Learning Center</string>
    <string name="login" translatable="false">Login</string>
    <string name="regis" translatable="false">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="remember" translatable="false">Remember me</string>
    <string name="glogin" translatable="false">Login With Google</string>
    <string name="have_acc" translatable="false">Already Have An Account?</string>
    <string name="fullName" translatable="false">Full Name</string>
    <string name="no_acc" translatable="false">Don\'t Have An Account?</string>
</resources>