<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-30dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/login_button"
            android:layout_width="324dp"
            android:layout_height="40dp"
            android:width="325dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/lato_bold"
            android:minHeight="40dp"
            android:onClick="login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="451dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Forget Password?"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="502dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/lato_black"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textColor="#5B9DC2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            android:elevation="5dp"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/email_icon"
            app:boxStrokeColor="@color/black"
            app:startIconTint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/log_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/black"
            android:elevation="5dp"
            app:startIconDrawable="@drawable/lock_icon"
            app:endIconMode="password_toggle"
            app:startIconTint="@color/black"
            app:endIconTint="@color/black"
            app:counterTextColor="@color/black"
            app:boxStrokeColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/log_password_field"
                android:background="@color/white"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/no_acc"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="724dp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:fontFamily="@font/lato_bold"
            android:onClick="goToRegister"
            android:text="@string/regis"
            android:textSize="14sp"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="724dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@id/progressBarScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="#CCFFFFFF"
                />
        </FrameLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>